<resources>
    <string name="app_name">Courses Management System</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="register">Register</string>
    <string name="home">Courses Tracks</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="phone">Phone</string>
    <string name="gpa">Gpa</string>

</resources>
