<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:padding="30dp"
            android:paddingTop="80dp"
            android:focusable="true"
            android:focusableInTouchMode="true">


            <ImageView
                android:id="@+id/logo"
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:layout_marginBottom="100dp"
                android:src="@drawable/logo" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/layout_email"
                android:layout_below="@+id/logo">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:id="@+id/email"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/layout_password"
                android:layout_below="@+id/layout_email"
                app:passwordToggleEnabled="true">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:id="@+id/password"/>

            </com.google.android.material.textfield.TextInputLayout>

            <ProgressBar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/loading"
                android:layout_marginTop="30dp"
                android:layout_below="@+id/layout_password"
                android:visibility="gone"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btn_login"
                android:layout_below="@+id/layout_password"
                android:layout_marginTop="35dp"
                android:text="@string/login"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/register"
                android:layout_alignParentBottom="true"
                android:text="@string/register"
                android:gravity="center|bottom"
                android:layout_below="@+id/btn_login"
                android:clickable="true"
                android:focusable="true"
                android:textColor="@color/text_color"
                android:layout_marginBottom="20dp"/>
        </RelativeLayout>
    </ScrollView>

</LinearLayout>